Adjusted details on mobile friendly home page, it now looks correctly in all mobile options

--- a/app/assets/stylesheets/components/_arrow.scss
+++ b/app/assets/stylesheets/components/_arrow.scss
@@ -7,16 +7,13 @@
 .arrow {
   width: 20px;
   height: 20px;
-  bottom: 0;
+  bottom: 5%;
   margin: -20px 0 0 -20px;
   -webkit-transform: rotate(45deg);
   border-left: none;
   border-top: none;
   border-right: 2px #fff solid;
   border-bottom: 2px #fff solid;
-  @media screen and (max-width: $small) {
-    bottom: 0;
-  }
 }
 
 .arrow:before {
